--- a/config/velodyne.yaml
+++ b/config/velodyne.yaml
@@ -20,10 +20,10 @@ mapping:
     fov_degree:    180
     det_range:     100.0
     extrinsic_est_en:  false      # true: enable the online estimation of IMU-LiDAR extrinsic,
-    extrinsic_T: [0.364, 0.017, -0.994]
-    extrinsic_R: [ 1, 0, 0, 
-                   0, 1, 0, 
-                   0, 0, 1]
+    extrinsic_T: [-0.226, -0.011, 4.457]
+    extrinsic_R: [  9.96685598e-01, -7.57613208e-02,  2.96317497e-02,
+                   7.58159138e-02,  9.97121571e-01, -7.21598261e-04,
+                 -2.94917875e-02,  2.96576477e-03,  9.99560623e-01]
 
 publish:
     path_en:  true
